--- a/templates/add_staff.html
+++ b/templates/add_staff.html
@@ -1,20 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  
-  <div class="container">
-    
-    <h1 style="text-align: center;" >ADD STAFF</h1>
-    <form method="POST" action="{{ url_for('add_staff') }}">
-      <form>
-        <div class="form-group">
-          <label for="proj_id">Project Name:</label>
-          <select class="form-control" id="proj_id" name="proj_id" required>
-            {% for project in projects %}
-            <option value="{{ project.proj_id }}">{{ project.proj_name }}</option>
-            {% endfor %}
-          </select>
-        </div>
+
+<div class="container">
+
+  <h1 style="text-align: center;">ADD STAFF</h1><br>
+  <form method="POST" action="{{ url_for('add_staff') }}" enctype="multipart/form-data">
+    <div class="row">
+      <div class="col-md-6">
+        <h2>Personal Info</h2>
         <div class="form-group">
           <label for="first_name">First Name:</label>
           <input type="text" class="form-control" id="first_name" name="first_name" required>
@@ -32,72 +26,84 @@
           </select>
         </div>
         <div class="form-group">
-          <label for="dob">Date of Birth: </label>
+          <label for="dob">Date of Birth:</label>
           <input type="date" class="form-control" id="dob" name="dob" required>
         </div>
         <div class="form-group">
-          <label for="work_email">Work Email: </label>
-          <input type="email" class="form-control" id="work_email" name="work_email">
-        </div>
-        <div class="form-group">
-          <label for="personal_email">Personal Email: </label>
+          <label for="personal_email">Personal Email:</label>
           <input type="email" class="form-control" id="personal_email" name="personal_email" required>
         </div>
         <div class="form-group">
-          <label for="contact_number">Contact Number: </label>
+          <label for="contact_number">Contact Number:</label>
           <input type="text" class="form-control" id="contact_number" name="contact_number" required>
         </div>
         <div class="form-group">
-          <label for="emergency_contact_number">Emergency Contact Number: </label>
-          <input type="text" class="form-control" id="emergency_contact_number" name="emergency_contact_number" required>
-        </div>
-        <div class="form-group">
-          <label for="address">Address: </label>
+          <label for="address">Address:</label>
           <textarea class="form-control" id="address" name="address"></textarea>
         </div>
         <div class="form-group">
-          <label for="disability_type">Disability Type: </label>
+          <label for="disability_type">Disability Type:</label>
           <input type="text" class="form-control" id="disability_type" name="disability_type" required>
         </div>
+      </div>
+      <div class="col-md-6">
+        <h2>Official Info</h2>
         <div class="form-group">
-          <label for="department">Department: </label>
+          <label for="proj_id">Project Name:</label>
+          <select class="form-control" id="proj_id" name="proj_id" required>
+            {% for project in projects %}
+            <option value="{{ project.proj_id }}">{{ project.proj_name }}</option>
+            {% endfor %}
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="work_email">Work Email:</label>
+          <input type="email" class="form-control" id="work_email" name="work_email">
+        </div>
+        <div class="form-group">
+          <label for="emergency_contact_number">Emergency Contact Number:</label>
+          <input type="text" class="form-control" id="emergency_contact_number" name="emergency_contact_number" required>
+        </div>
+        <div class="form-group">
+          <label for="department">Department:</label>
           <input type="text" class="form-control" id="department" name="department" required>
         </div>
         <div class="form-group">
-          <label for="call_sign">Call Sign: </label>
+          <label for="call_sign">Call Sign:</label>
           <input type="text" class="form-control" id="call_sign" name="call_sign">
         </div>
         <div class="form-group">
-          <label for="un_index_number">UN Index Number: </label>
-          <input type="text" class="form-control" id="un_index_number" name="un_index_number" >
+          <label for="un_index_number">UN Index Number:</label>
+          <input type="text" class="form-control" id="un_index_number" name="un_index_number">
         </div>
         <div class="form-group">
-          <label for="joining_date">Joining Date: </label>
+          <label for="joining_date">Joining Date:</label>
           <input type="date" class="form-control" id="joining_date" name="joining_date" required>
         </div>
         <div class="form-group">
-          <label for="last_working_date">Last Working Date: </label>
+          <label for="last_working_date">Last Working Date:</label>
           <input type="date" class="form-control" id="last_working_date" name="last_working_date">
         </div>
-      <div class="form-group">
-        <label for="contract_type">Contract Type: </label>
-        <input type="text" class="form-control" id="contract_type" name="contract_type" required>
+        <div class="form-group">
+          <label for="contract_type">Contract Type:</label>
+          <input type="text" class="form-control" id="contract_type" name="contract_type" required>
+        </div>
+        <div class="form-group">
+          <label for="grade">Grade:</label>
+          <input type="text" class="form-control" id="grade" name="grade" required>
+        </div>
+        <div class="form-group">
+          <label for="designation">Designation:</label>
+          <input type="text" class="form-control" id="designation" name="designation" required>
+        </div>
+        <div class="form-group">
+          <label class="form-label" for="customFile">Upload Profile Picture:</label>
+          <input type="file" class="form-control" id="Photo" name="Image" accept="image/*">
+        </div>        
       </div>
-      <div class="form-group">
-        <label for="grade">Grade: </label>
-        <input type="text" class="form-control" id="grade" name="grade" required>
-      </div>
-      <div class="form-group">
-        <label for="designation">Designation: </label>
-        <input type="text" class="form-control" id="designation" name="designation" required>
-      </div>
-      
-      <div class="form-group">
-        <label class="form-label" for="customFile">Upload Profile Picture: </label>
-        <input type="file" class="form-control" id="Photo" />
-      </div>
-      <button type="submit" class="btn btn-primary" href="view_staff.html">Submit</button>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
 
-    </form>
-  </div>
-  {% endblock %}
+{% endblock %}
