--- a/templates/base.html
+++ b/templates/base.html
@@ -1,40 +1,62 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>{% block title %}{% endblock %}</title>
-	<link rel="stylesheet" type="text/css" href="/static/css/index_styles.css">
-	<!-- Add Bootstrap stylesheet link -->
-	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" type="text/css" href="/static/css/index_styles.css">
+    <!-- Add Bootstrap stylesheet link -->
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<div class="container">
+    <div class="container">
         <!-- Logo and contact info -->
-        <div class="row">
-            <div class="col-lg-6">
-                <a href="{{ url_for('index') }}"><img class="logo" src="/static/logo.png" alt="Logo"></a>
-            </div>
-            <div class="col-12 col-md-6 text-right" style="font-size: 19.25spx;">
-                <p>       </p>
-                <p class="text-uppercase mb-0">United Nations Human Settlement Programme</p>
-                <p class="mb-0">P.O.Box 107, Kathmandu, Nepal | Sanepa Height, Lalitpur, Nepal   </p>
-                <p class="mb-0"><a href="mailto:unhabitat.nepal@unhabitat.org.np" class="text-primary">unhabitat.nepal@unhabitat.org.np</a> | <a href="http://www.unhabitat.org.np" class="text-primary">www.unhabitat.org.np</a></p>
-                <h5 class="text-uppercase text-primary mt-2">FOR BETTER URBAN FUTURE</h5>
-            </div>
-            
-        </div>
-
-       
+        <div class="row align-items-start">
+          <div class="col-lg-6">
+            <a href="{{ url_for('index') }}"><img class="logo" src="/static/logo.png" alt="Logo"></a>
+          </div>
+      
+          <div class="col-12 col-md-6 text-right contact-info">
+            <p class="text-uppercase mb-0">United Nations Human Settlement Programme</p>
+            <p class="mb-0">P.O.Box 107, Kathmandu, Nepal | Sanepa Height, Lalitpur, Nepal</p>
+            <p class="mb-0"><a href="mailto:unhabitat.nepal@unhabitat.org.np" class="text-primary">unhabitat.nepal@unhabitat.org.np</a> | <a href="http://www.unhabitat.org.np" class="text-primary">www.unhabitat.org.np</a></p>
+            <h5 class="text-uppercase text-primary mt-2">FOR BETTER URBAN FUTURE</h5>
+          </div>
         
+        </div><br><br>
+        
+
+       <!--navbar-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
+                <div class="welcome-box" style="text-align: left;">
+                    <h2>
+                        <div class="welcome-link" style="color: #51b2fa;">Welcome {{ session.get('user_id')|upper }}</div>
+                    </h2>
+                </div>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">
+                            <div class="btn btn-outline-danger btn-sm btn-box" style="padding: 6px;">
+                                Logout
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav><br>
+
         {% block content %}
         {% endblock %}
 
-	<!-- Add Bootstrap JavaScript script tags for toggle button functionality -->
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <!-- Add Bootstrap JavaScript script tags for toggle button functionality -->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    </div>
 </body>
 </html>
