--- a/templates/index.html
+++ b/templates/index.html
@@ -1,150 +1,183 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <!-- Options buttons for inventory and staff management -->
-    <div class="options">
-        <style>
-            .options {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-wrap: wrap;
-                gap: 20px;
-                margin-top: 50px;
-            }
-
-            .box {
-                background-color: #f0f0f0;
-                padding: 20px;
-                text-align: center;
-                width: 200px;
-                border-radius: 5px;
-            }
-
-            .box h2 {
-                margin-bottom: 15px;
-                font-size: 1.5rem;
-            }
-
-            .option {
-                margin-bottom: 10px;
-            }
-
-            .button {
-                display: inline-block;
-                padding: 10px 20px;
-                background-color: #51b2fa;
-                color: white;
-                border: none;
-                border-radius: 5px;
-                text-decoration: none;
-                font-size: 15px;
-            }
-
-            .button:hover {
-                background-color:  #51b2fa;
-            }
-
-            /* Adjust the size of search elements */
-            .search-form {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                margin-top: 10px;
-            }
-
-            .search-input {
-                width: 100%;
-                max-width: 150px; /* Adjust the max width as needed */
-                padding: 6px;
-                font-size: 14px;
-            }
-
-            .search-button {
-                margin-left: 5px;
-                padding: 6px 12px;
-                font-size: 14px;
-            }
-        </style>
-
-        <div class="box">
-            <h2>Inventory Management</h2>
+<div class="options">
+    <style>
+        .options {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin-top: 50px;
+        }
+    
+        .box {
+            background-color: #f0f0f0;
+            padding: 20px;
+            text-align: center;
+            width: 200px;
+            height: 240px; /* Increased height to accommodate search elements */
+            border-radius: 5px;
+            display: flex;
+            flex-direction: column; /* Added to align search elements */
+            justify-content: space-between; /* Added to distribute elements vertically */
+            /* Add the following line to make the background color same as the overall background */
+            background-color: inherit;
+        }
+    
+        .box h2 {
+            margin-bottom: 15px;
+            font-size: 1.2rem;
+        }
+    
+        .option {
+            margin-bottom: 10px;
+        }
+    
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #51b2fa;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            text-decoration: none;
+            font-size: 15px;
+            width: 100%; /* Make buttons the same width */
+        }
+    
+        .button:hover {
+            background-color:  #51b2fa;
+        }
+    
+        /* Adjust the size of search elements */
+        .search-form {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-top: 10px;
+        }
+    
+        .search-wrapper {
+            display: flex;
+            align-items: center;
+            width: 100%;
+            max-width: 160px; /* Set the maximum width for the search input and button */
+            margin: 0 auto;
+        }
+    
+        .search-input {
+            flex: 1;
+            padding: 6px;
+            font-size: 14px;
+            box-sizing: border-box; /* Adjust the input size including padding */
+            height: 34px; /* Added to match the height of the search button */
+        }
+    
+        .search-button {
+            padding: 6px 12px;
+            font-size: 14px;
+            height: 34px; /* Make the button same height as the input */
+        }
+    </style>
+    
+    <div class="box">
+        <h2>Inventory Management</h2>
+        {% if session['user_id'] == 'ict' or session['user_id'] == 'operator' %}
             <div class="option">
                 <a href="{{ url_for('add_inventory') }}"><button class="button">Add Inventory</button></a>
             </div>
-            <div class="option">
-                <a href="{{ url_for('view_inventory') }}"><button class="button">View Inventory</button></a>
-            </div>
-            <div class="option">
-                <div class="search-form">
-                    <input class="search-input" type="search" placeholder="Search" aria-label="Search">
-                    <button class="search-button btn btn-outline-primary" type="submit">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-                        </svg>
-                    </button>
-                </div>
+        {% endif %}
+        <div class="option">
+            <a href="{{ url_for('view_inventory') }}"><button class="button">View Inventory</button></a>
+        </div>
+        <div class="option search-option">
+            <div class="search-form">
+                <form action="{{ url_for('search_inventory') }}" method="GET">
+                    <div class="search-wrapper">
+                        <input class="search-input" type="search" name="search_query" placeholder="Search" aria-label="Search"> &nbsp;
+                        <button class="search-button btn btn-outline-primary" type="submit">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                                <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                            </svg>
+                        </button>
+                    </div>
+                </form>
             </div>
         </div>
+    </div>&nbsp;&nbsp;
 
-        <div class="box">
-            <h2>Staff Management</h2>
+
+    <div class="box">
+        <h2>Staff Management</h2>
+        {% if session['user_id'] == 'ict' or session['user_id'] == 'operator' %}
             <div class="option">
                 <a href="{{ url_for('add_staff') }}"><button class="button">Add Staff</button></a>
             </div>
-            <div class="option">
-                <a href="{{ url_for('view_staff') }}"><button class="button">View Staff</button></a>
-            </div>
-            <div class="option">
-                <div class="search-form">
-                    <input class="search-input" type="search" placeholder="Search" aria-label="Search">
+        {% endif %} 
+        <div class="option">
+            <a href="{{ url_for('view_staff') }}"><button class="button">View Staff</button></a>
+        </div>
+        <div class="option">
+            <form action="{{ url_for('view_staff') }}" method="get" class="search-form">
+                <div class="search-wrapper">
+                    <input class="search-input" type="search" name="search_query" placeholder="Search" aria-label="Search">&nbsp;
                     <button class="search-button btn btn-outline-primary" type="submit">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                             <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                         </svg>
                     </button>
                 </div>
-            </div>
+            </form>
         </div>
+    </div>&nbsp;&nbsp;
 
-        <div class="box">
-            <h2>Project Management</h2>
+    <div class="box">
+        <h2>Project Management</h2>
+        {% if session['user_id'] == 'ict' or session['user_id'] == 'operator' %}
             <div class="option">
                 <a href="{{ url_for('add_projects') }}"><button class="button">Add Project</button></a>
             </div>
-            <div class="option">
-                <a href="{{ url_for('view_projects') }}"><button class="button">View Project</button></a>
-            </div>
-            <div class="option">
-                <div class="search-form">
-                    <input class="search-input" type="search" placeholder="Search" aria-label="Search">
+        {% endif %}
+        <div class="option">
+            <a href="{{ url_for('view_projects') }}"><button class="button">View Project</button></a>
+        </div>
+        <div class="option">
+            <form action="{{ url_for('view_projects') }}" method="get" class="search-form">
+                <div class="search-wrapper">
+                    <input class="search-input" type="search" name="search_query" placeholder="Search" aria-label="Search"> &nbsp;
                     <button class="search-button btn btn-outline-primary" type="submit">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                             <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                         </svg>
                     </button>
                 </div>
-            </div>
+            </form>
         </div>
+    </div>&nbsp;&nbsp;
 
-        <div class="box">
-            <h2>Attendance Management</h2>
+    <div class="box">
+        <h2>Attendance Management</h2>
+        {% if session['user_id'] == 'ict' or session['user_id'] == 'operator' %}
             <div class="option">
                 <a href="{{ url_for('add_attendance') }}"><button class="button">Add Attendance</button></a>
             </div>
-            <div class="option">
-                <a href="{{ url_for('view_attendance') }}"><button class="button">View Attendance</button></a>
-            </div>
-            <div class="option">
-                <div class="search-form">
-                    <input class="search-input" type="search" placeholder="Search" aria-label="Search">
+        {% endif %}
+        <div class="option">
+            <a href="{{ url_for('view_attendance') }}"><button class="button">View Attendance</button></a>
+        </div>
+        <div class="option">
+            <form action="{{ url_for('view_attendance') }}" method="get" class="search-form">
+                <div class="search-wrapper">
+                    <input class="search-input" type="search" name="search_query" placeholder="Search" aria-label="Search"> &nbsp;
                     <button class="search-button btn btn-outline-primary" type="submit">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                             <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                         </svg>
                     </button>
                 </div>
-            </div>
+            </form>
         </div>
-    </div>
+    </div>&nbsp;&nbsp;
 {% endblock %}
