--- a/templates/update_attendance.html
+++ b/templates/update_attendance.html
@@ -5,13 +5,14 @@
     <h1 style="text-align: center;">Update Attendance</h1>
     <form method="POST" action="{{ url_for('update_attendance', att_id=attendance.att_id) }}">
         <div class="form-group">
-            <label for="staff_id">Staff Name:</label>
-            <select class="form-control" id="staff_id" name="staff_id" required>
-                {% for staff in staffs %}
-                <option value="{{ staff.staff_id }}" {% if staff.staff_id == attendance.staff_id %}selected{% endif %}>{{ staff.first_name }} {{ staff.last_name }}</option>
+            <label for="staff_personal_id">Staff Name:</label>
+            <select class="form-control" id="staff_personal_id" name="staff_personal_id" required>
+                {% for staff_personal_info in staff_personal_infos %}
+                <option value="{{ staff_personal_info.staff_personal_id }}" {% if staff_personal_info.staff_personal_id == attendance.staff_personal_id %}selected{% endif %}>{{ staff_personal_info.first_name }} {{ staff_personal_info.last_name }}</option>
                 {% endfor %}
             </select>
         </div>
+        
         <div class="form-group">
             <label for="leave_type">Leave Type:</label>
             <select class="form-control" id="leave_type" name="leave_type" required>
