--- a/templates/update_inventory.html
+++ b/templates/update_inventory.html
@@ -91,10 +91,12 @@
       <label for="staff">Custodian Name:</label>
       <select class="form-control" id="staff" name="staff">
         {% for staff_member in staff_members %}
-        <option value="{{ staff_member.staff_id }}" {% if staff_member.staff_id == inventory.staff_id %}selected{% endif %}>{{ staff_member.first_name }} {{ staff_member.last_name }}</option>
+          <option value="{{ staff_member.staff_personal_id }}" {% if staff_member.staff_personal_id == inventory.staff_personal_id %}selected{% endif %}>
+            {{ staff_member.first_name }} {{ staff_member.last_name }}
+          </option>
         {% endfor %}
       </select>
-    </div>
+    </div>   
     <div class="form-group">
       <label for="status">Status:</label>
       <input type="text" class="form-control" id="status" name="status" value="{{ inventory.status }}">
