--- a/templates/view_staff.html
+++ b/templates/view_staff.html
@@ -1,38 +1,75 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  
-
-    <!-- staff Basic Information Table -->
+    <!-- Staff  Table -->
     <div class="row mt-5">
-      <div class="col-12">
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th><strong>Staff ID</strong></th>
-              <th><strong>First Name</strong></th>
-              <th><strong>Last Name</strong></th>
-              <th><strong>Contact Number</strong></th>
-              <th><strong>Department</strong></th>
-              <th>Action</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for staff in staffs %}
-              <tr>
-                <td>{{ staff.staff_id }}</td>
-                <td>{{ staff.first_name }}</td>
-                <td>{{ staff.last_name }}</td>
-                <td>{{ staff.contact_number }}</td>
-                <td>{{ staff.department }}</td>
-                <td><a href="{{ url_for('view_staff_one', staff_id=staff.staff_id) }}">View</a></td>
-              </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-      </div>
+        <div class="col-12">
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                        <th>Staff ID</th>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Contact Number</th>
+                        <th>Department</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for staff in staffs.items %}
+                        <tr>
+                            <td>{{ staff.staff_personal.staff_personal_id }}</td>
+                            <td>{{ staff.staff_personal.first_name }}</td>
+                            <td>{{ staff.staff_personal.last_name }}</td>
+                            <td>{{ staff.staff_personal.contact_number }}</td>
+                            <td>{{ staff.department }}</td>
+                            <td><a href="{{ url_for('view_staff_one', staff_personal_id=staff.staff_personal.staff_personal_id) }}">View</a></td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+            
+            <nav aria-label="Staff pagination">
+                <ul class="pagination justify-content-end">
+                    {% if staffs.has_prev %}
+                        <li class="page-item">
+                            <a class="page-link" href="{{ url_for('view_staff', page=staffs.prev_num) }}">Previous</a>
+                        </li>
+                    {% else %}
+                        <li class="page-item disabled">
+                            <span class="page-link">Previous</span>
+                        </li>
+                    {% endif %}
+
+                    {% for num in staffs.iter_pages(left_edge=2, right_edge=2, left_current=2, right_current=2) %}
+                        {% if num %}
+                            {% if num == staffs.page %}
+                                <li class="page-item active">
+                                    <span class="page-link">{{ num }}</span>
+                                </li>
+                            {% else %}
+                                <li class="page-item">
+                                    <a class="page-link" href="{{ url_for('view_staff', page=num) }}">{{ num }}</a>
+                                </li>
+                            {% endif %}
+                        {% else %}
+                            <li class="page-item disabled">
+                                <span class="page-link">...</span>
+                            </li>
+                        {% endif %}
+                    {% endfor %}
+
+                    {% if staffs.has_next %}
+                        <li class="page-item">
+                            <a class="page-link" href="{{ url_for('view_staff', page=staffs.next_num) }}">Next</a>
+                        </li>
+                    {% else %}
+                        <li class="page-item disabled">
+                            <span class="page-link">Next</span>
+                        </li>
+                    {% endif %}
+                </ul>
+            </nav>
+        </div>
     </div>
-    <a href="{{ url_for('index') }}" class="btn btn-primary" style="justify-content: left;">Home</a>
-  </div>
-  
-  {% endblock %}
+{% endblock %}
