--- a/templates/view_staff_one.html
+++ b/templates/view_staff_one.html
@@ -1,41 +1,101 @@
 {% extends 'base.html' %}
 
 {% block content %}
-       <!-- staff Table -->
-    <div class="row mt-5 align-items-start">
-        <div class="col-12">
-            <ul class="list-unstyled">
-                <div class="container mt-5">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <img class="img-fluid rounded-circle" src="/static/profile_pictures/{{ staff.profile_picture }}" alt="Profile Picture">
-                        </div>
-                        <div class="col-md-8">
-                            <h5>Name: {{ staff.first_name }} {{ staff.last_name }}</h5>
-                            <p>Allocated Project : {{ project_name }}</p>
-                            <p>Gender: {{ staff.gender }}</p>
-                            <p>Date Of Birth: {{ staff.dob }}</p>
-                            <p>Work email: {{ staff.work_email }}</p>
-                            <p>Personal email: {{ staff.personal_email }}</p>
-                            <p>Contact:{{ staff.contact_number }}</p>
-                            <p>Emergency Contact Number: {{ staff.emergency_contact_number }}</p>
-                            <p>Address: {{ staff.address }}</p>
-                            <p>Disability Type: {{ staff.disability_type }}</p>
-                            <p>Department: {{ staff.department }}</p>
-                            <p>Call Sign: {{ staff.call_sign }}</p>
-                            <p>Index Number: {{ staff.un_index_number }}</p>
-                            <p>Joining Date: {{ staff.joining_date }}</p>
-                            <p>Last Working Date:{{ staff.last_working_date }}</p>
-                            <p>Contact Type:{{ staff.contract_type }}</p>
-                            <p>Grade: {{ staff.grade }}</p>
-                            <p>Designation: {{ staff.designation }}</p>
-                            
+    <style>
+        .info-box {
+            background-color: #f8f8f8;
+            padding: 20px;
+            margin-bottom: 20px;
+        }
+
+        .name-heading {
+            text-align: center;
+            color: #51b2fa;
+        }
+    </style>
+      <!-- staff Table -->
+        <div class="row mt-5 align-items-start">
+            <div class="col-12">
+                <ul class="list-unstyled">
+                    <div class="container mt-5">
+                        <div class="row">
+                            <div class="col-md-12 text-center">
+                                {% if staffpersonal.profile_picture %}
+                                <img class="img-fluid rounded-circle profile-image" src="{{ url_for('static', filename='staff_images/' ~ staffpersonal.first_name[0]|upper ~ staffpersonal.first_name[1:] ~ '_' ~ staffpersonal.last_name[0]|upper ~ staffpersonal.last_name[1:] ~ '_' ~ staffpersonal.contact_number ~ get_file_extension(staffpersonal.profile_picture)) }}" alt="Profile Picture" id="profile-picture">
+                                {% else %}
+                                    <img class="img-fluid rounded-circle profile-image" src="{{ url_for('static', filename='staff_images/default_photo.png') }}" alt="Default Profile Picture" id="profile-picture">
+                                {% endif %}
+                            </div>
                         </div>
                     </div>
-                </div>
-            </ul>
+                </ul>
+            </div>
         </div>
-        <a href="{{ url_for('view_staff') }}" class="btn btn-primary">Back</a>&nbsp;&nbsp;
-        <a href="{{ url_for('delete_staff', staff_id=staff.staff_id) }}" class="btn btn-danger" style="justify-content: left;">Delete</a>&nbsp;&nbsp;
-        <a href="{{ url_for('update_staff', staff_id=staff.staff_id) }}" class="btn btn-secondary" style="justify-content: left;">Update</a>
+
+<style>
+    .profile-image {
+        max-width: 200px;
+        max-height: 200px;
+    }
+    .enlarged {
+        transform: scale(1.5); /* Adjust the scaling factor as needed */
+    }
+</style>
+
+<script>
+    // JavaScript to make the photo bigger when clicked
+    document.getElementById("profile-picture").addEventListener("click", function() {
+        this.classList.toggle("enlarged");
+    });
+</script>
+
+    <div class="col-md-12">
+        <div class="name-heading">
+            <h1>{{ staffpersonal.first_name|capitalize }} {{ staffpersonal.last_name|capitalize }}</h1>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="info-box">
+                    <h2>Personal Info</h2>
+                    <p>Gender: {{ staffpersonal.gender }}</p>
+                    <p>Date Of Birth: {{ staffpersonal.dob }}</p>
+                    <p>Personal email: {{ staffpersonal.personal_email }}</p>
+                    <p>Contact: {{ staffpersonal.contact_number }}</p>
+                    <p>Address: {{ staffpersonal.address }}</p>
+                    <p>Disability Type: {{ staffpersonal.disability_type }}</p>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="info-box">
+                    <h2>Official Info</h2>
+                    <p>Allocated Project: {{ project_name }}</p>
+                    <p>Work email: {{ staffofficial.work_email }}</p>
+                    <p>Emergency Contact Number: {{ staffpersonal.emergency_contact_number }}</p>
+                    <p>Department: {{ staffofficial.department }}</p>
+                    <p>Call Sign: {{ staffofficial.call_sign }}</p>
+                    <p>Index Number: {{ staffofficial.un_index_number }}</p>
+                    <p>Joining Date: {{ staffofficial.joining_date }}</p>
+                    <p>Last Working Date: {{ staffofficial.last_working_date }}</p>
+                    <p>Contract Type: {{ staffofficial.contract_type }}</p>
+                    <p>Grade: {{ staffofficial.grade }}</p>
+                    <p>Designation: {{ staffofficial.designation }}</p>
+                </div>
+                <a href="{{ url_for('official_history', staff_personal_id=staffpersonal.staff_personal_id) }}" class="btn btn-info" style="margin-top: 10px;">Official History</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-12">
+                <a href="{{ url_for('view_staff') }}" class="btn btn-primary">Back</a>&nbsp;&nbsp;
+                {% if session['user_id'] == 'ict' %}
+                    <a href="{{ url_for('delete_staff', staff_personal_id=staffpersonal.staff_personal_id) }}" class="btn btn-danger" style="justify-content: left;">Delete</a>&nbsp;&nbsp;
+                {% endif %}
+                {% if session['user_id'] == 'ict' or session['user_id'] == 'operator' %}
+                    <a href="{{ url_for('update_staff', staff_personal_id=staffpersonal.staff_personal_id) }}" class="btn btn-secondary" style="justify-content: left;">Update</a>
+                {% endif %}
+            </div>
+        </div>
+    </div>
 {% endblock %}
